# hndigest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC-000-hndigest.md  docker-compose.yaml  hndigest.db-shm  hndigest.db-wal  pyproject.toml
config/: README.md  categories.yaml  llm.yaml  orchestrator.yaml  prompts.yaml  scoring.yaml
db/migrations/: 001_initial_schema.sql  002_orchestrator_decisions.sql  README.md
docs/adr/: ADR-001-phase1-foundation.md  ADR-002-llm-orchestration.md  ADR-002-phase2-content-pipeline.md  ADR-003-llm-orchestration.md  ADR-003-orchestrator-agent.md  ADR-003-phase2-content-pipeline.md  ADR-004-llm-orchestration.md  ADR-004-orchestrator-agent.md  ADR-005-pydantic-type-safety.md  ADR-006-fastapi-backend.md  ADR-007-web-dashboard.md  README.md
docs/superpowers/plans/: 2026-04-08-web-dashboard.md
frontend/: Dockerfile  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ConnectionStatus.tsx  Nav.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.tsx
frontend/src/lib/: api.ts  events.ts  types.ts
specs/: README.md
src/hndigest/: __main__.py  config.py  models.py  paths.py
src/hndigest/agents/: base.py  categorizer.py  collector.py  fetcher.py  orchestrator.py  report_builder.py  scorer.py  summarizer.py  validator.py
src/hndigest/api/: __init__.py  deps.py  schemas.py  websocket.py
tests/: conftest.py  test_amendment2.py  test_amendment3.py  test_api.py  test_integration.py  test_llm_live.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
(+25 files in other folders)
