[project]
name = "hndigest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "PyYAML",
    "trafilatura",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
